--- a/pruebas_recorrer_automata/pruebas_recorrer_automata.csproj
+++ b/pruebas_recorrer_automata/pruebas_recorrer_automata.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4A648A80-15E1-4A48-AC35-08D6774DD6F0}</ProjectGuid>
+    <ProjectGuid>{531ED69E-76D3-4135-A6BB-7679762CD0B1}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>pruebas_lectura</RootNamespace>
-    <AssemblyName>pruebas_lectura</AssemblyName>
+    <RootNamespace>pruebas_recorrer_automata</RootNamespace>
+    <AssemblyName>pruebas_recorrer_automata</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
