Entidades e identificadores de error agregados. Funciones para leer archivos y lógica del menú modificados.

--- a/pruebasssssssssss/pruebasssssssssss.csproj
+++ b/pruebasssssssssss/pruebasssssssssss.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\AutomataEntity.cs" />
+    <Compile Include="Entities\TransicionEntity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
